--- a/mern-notas-app/backend/config.json
+++ b/mern-notas-app/backend/config.json
@@ -1,3 +1,3 @@
 {
-    "connectionString": "mongodb+srv://luidev:luidev@cluster0.q4e6nwp.mongodb.net/?retryWrites=true&w=majority"
+    "connectionString": "TU_MONGO_DB_URI"
 }
